// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShieldGroup should match snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row-reverse",
      "justifyContent": "space-between",
      "marginVertical": 8,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Icon
      allowFontScaling={false}
      color="#F9A901"
      name="badge"
      onPress={[Function]}
      size={23}
      style={
        Object {
          "marginHorizontal": 3,
        }
      }
      testID="info"
    />
    <Icon
      allowFontScaling={false}
      color="#F9A901"
      name="badge"
      onPress={[Function]}
      size={23}
      style={
        Object {
          "marginHorizontal": 3,
        }
      }
    />
    <Icon
      allowFontScaling={false}
      color="#B3BBC3"
      name="badge"
      onPress={[Function]}
      size={23}
      style={
        Object {
          "marginHorizontal": 3,
        }
      }
    />
  </View>
  <BottomSheet
    headerTitle="Shield Status"
    isShadowView={true}
    onCloseSheet={[Function]}
    sheetHeight={500}
    visible={false}
  >
    <ScrollViewMock
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "padding": 16,
          }
        }
      >
        <Markdown
          debug={false}
          markdownStyles={Object {}}
          parseInline={false}
          useDefaultStyles={true}
        />
      </View>
    </ScrollViewMock>
  </BottomSheet>
</View>
`;

exports[`ShieldGroup should match snapshot with props 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginVertical": 8,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#0084F8",
      }
    }
    textType="regular"
    type="small"
  >
    Villa
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Icon
      allowFontScaling={false}
      color="#F9A901"
      name="badge"
      onPress={[Function]}
      size={23}
      style={
        Object {
          "marginHorizontal": 3,
        }
      }
      testID="info"
    />
    <Icon
      allowFontScaling={false}
      color="#F9A901"
      name="badge"
      onPress={[Function]}
      size={23}
      style={
        Object {
          "marginHorizontal": 3,
        }
      }
    />
    <Icon
      allowFontScaling={false}
      color="#B3BBC3"
      name="badge"
      onPress={[Function]}
      size={23}
      style={
        Object {
          "marginHorizontal": 3,
        }
      }
    />
  </View>
  <BottomSheet
    headerTitle="Shield Status"
    isShadowView={true}
    onCloseSheet={[Function]}
    sheetHeight={500}
    visible={false}
  >
    <ScrollViewMock
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "padding": 16,
          }
        }
      >
        <Markdown
          debug={false}
          markdownStyles={Object {}}
          parseInline={false}
          useDefaultStyles={true}
        />
      </View>
    </ScrollViewMock>
  </BottomSheet>
</View>
`;
